media/webrtc/trunk/webrtc/modules/audio_coding/neteq/neteq_impl.cc
@@ -689,8 +689,12 @@ int NetEqImpl::InsertPacketInternal(const WebRtcRTPHeader& rtp_header,
       !decoder_database_->IsComfortNoise(main_payload_type)) {
     // The list can be empty here if we got nothing but DTMF payloads.
     AudioDecoder* decoder = decoder_database_->GetDecoder(main_payload_type);
-    RTC_DCHECK(decoder);  // Should always get a valid object, since we have
-                          // already checked that the payload types are known.
+    // In Mozilla webrtc.org builds we can not assume a valid decoder for each
+    // known payload type as some codecs are not built.
+    if (!decoder) {
+      LOG(LS_WARNING) << "Unsupported rtp payload type: " << main_payload_type;
+      return kUnknownRtpPayloadType;
+    }
     decoder->IncomingPacket(packet_list.front().payload.data(),
                             packet_list.front().payload.size(),
                             packet_list.front().sequence_number,
